<resources>
    <string name="app_name">Rendimiento Estudiantil</string>
    <string name="action_settings">Configuración</string>
    <string name="title_activity_login">Iniciar Sesión</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Constraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_logout">Cerrar Sesión</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="error_invalid_email">El correo es inválido</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Se requiere este dato</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_cancel">Cancel</string>
    <string name="title_activity_courses">Cursos</string>
    <string name="title_activity_alumns">AlumnsActivity</string>
    <string name="title_activity_chart">ChartActivity</string>
    <string name="title_activity_add_institution">Agregar Institución</string>
    <string name="title_activity_add_course">Agregar Curso</string>
    <string name="title_activity_add_student">Agregar Estudiante</string>
    <string name="action_add">Agregar</string>


    <string name="action_show_evaluations">Mostrar Evalaciones</string>
    <string name="action_add_notes">Agregar Notas</string>
    <string name="action_action_compare">Comparar</string>
    <string name="action_show_compare">Ver comparación</string>


    <string-array name="turnos_array">
        <item>Mañana</item>
        <item>Tarde</item>
        <item>Noche</item>
    </string-array>
    <string name="title_activity_evaluation">EvaluationActivity</string>
    <string name="title_activity_add_evaluation">AddEvaluationActivity</string>
    <string name="title_activity_add_notes_sudents">AddNotesSudentsActivity</string>
    <string name="title_activity_courses_tabs">CoursesTabsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="name_institution">Nombre de la institución</string>
    <string name="name_course">Nombre del curso</string>
    <string name="cycle">Ciclo</string>
    <string name="numeroSection">Número de sección</string>
    <string name="names">Nombres</string>
    <string name="last_name">Apellidos</string>
    <string name="num_hours">Horas de estudio</string>
    <string name="description">Descripción</string>
    <string name="porcentage">Porcentage</string>
    <string name="institution_name">Instituciones</string>
    <string name="selected_count">%1$s seleccionados</string>
</resources>
