<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_register_notes"
        android:orderInCategory="100"
        android:title="@string/action_show_evaluations"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit_student"
        android:visible="false"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_edit"
        />
    <item
        android:id="@+id/action_add_notes"
        android:orderInCategory="100"
        android:title="@string/action_add_notes"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_action_compare"
        android:orderInCategory="100"
        android:title="@string/action_action_compare"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_compare"
        android:orderInCategory="100"
        android:title="@string/action_show_compare"
        app:showAsAction="ifRoom"
        android:visible="false"
        />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
