<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pe.edu.utp.rendimientoestudiantil.activities.AddInstitutionActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_add_course">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:hint="@string/name_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/autoCompleteTextView" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:hint="@string/cycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cicloEditText"
            android:inputType="number"
            />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Turno"
        />

    <Spinner
        android:layout_height="wrap_content"
        android:scrollbarStyle="insideInset"

        android:layout_width="fill_parent"
        android:id="@+id/spinner" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:hint="@string/numeroSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/seccionEditText"
            />
    </android.support.design.widget.TextInputLayout>


</LinearLayout>